--- a/package.json
+++ b/package.json
@@ -12,15 +12,17 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@headlessui/react": "^2.2.0",
-    "@tailwindcss/vite": "^4.0.0",
+    "@tailwindcss/vite": "^4.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
     "react-icons": "^5.4.0",
+    "react-modal": "^3.16.3",
     "react-modal-image": "^2.6.0",
     "react-router-dom": "^7.1.3",
     "react-zoom-pan-pinch": "^3.7.0",
-    "swiper": "^11.2.1"
+    "swiper": "^11.2.1",
+    "tailwindcss": "^4.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
